add jobs routes to openapi
