# server/docs/swagger.yaml
@@ -1,5 +1,51 @@
 basePath: /api/v1
 definitions:
+  handler.JobRequest:
+    properties:
+      applied_at:
+        type: string
+      company:
+        type: string
+      interviewed_at:
+        type: string
+      job_url:
+        type: string
+      location_type:
+        type: string
+      notes:
+        type: string
+      position:
+        type: string
+      salary:
+        type: string
+      source:
+        type: string
+      status:
+        type: string
+    type: object
+  handler.JobResponse:
+    properties:
+      applied_at:
+        type: string
+      company:
+        type: string
+      interviewed_at:
+        type: string
+      job_url:
+        type: string
+      location_type:
+        type: string
+      notes:
+        type: string
+      position:
+        type: string
+      salary:
+        type: string
+      source:
+        type: string
+      status:
+        type: string
+    type: object
   handler.LoginRequest:
     properties:
       password:
@@ -31,6 +77,94 @@ info:
   title: Job Tracker API
   version: "1.0"
 paths:
+  /jobs:
+    get:
+      description: Retrieve a list of all job applications for the logged-in user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handler.JobResponse'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all jobs
+      tags:
+      - jobs
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Job Details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.JobRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handler.JobResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new job
+      tags:
+      - jobs
+  /jobs/{id}:
+    delete:
+      parameters:
+      - description: Job ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+      security:
+      - BearerAuth: []
+      summary: Delete a job
+      tags:
+      - jobs
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Job ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated Job Details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.JobRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.JobResponse'
+      security:
+      - BearerAuth: []
+      summary: Update a job
+      tags:
+      - jobs
   /login:
     post:
       consumes:
@@ -93,4 +227,10 @@ paths:
       summary: Register a new user
       tags:
       - auth
+securityDefinitions:
+  BearerAuth:
+    description: Type 'Bearer ' followed by your JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
